// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PartOfSpeechItem /> should mark POS item as active 1`] = `
<div
  class="noun tab card active"
>
  <div
    class="label"
  >
    noun
  </div>
  <div
    class="count"
  >
     
  </div>
</div>
`;

exports[`<PartOfSpeechItem /> should mark POS item as enabled 1`] = `
<div
  class="noun tab card"
>
  <div
    class="label"
  >
    noun
  </div>
  <div
    class="count"
  >
     
  </div>
</div>
`;

exports[`<PartOfSpeechItem /> should mark POS item with frequency 1`] = `
<div
  class="noun tab card"
>
  <div
    class="label"
  >
    noun
  </div>
  <div
    class="count badge"
  >
    1
  </div>
</div>
`;

exports[`<PartOfSpeechItem /> should render disabled, inactive POS item 1`] = `
<div
  class="noun tab card empty"
>
  <div
    class="label"
  >
    noun
  </div>
  <div
    class="count"
  >
     
  </div>
</div>
`;

exports[`<PartOfSpeechSelector /> should mark POS with definition only as available 1`] = `
<div>
  <PartOfSpeechItem
    active={false}
    enabled={false}
    freq={0}
    label="noun"
    type="noun"
  />
  <PartOfSpeechItem
    active={false}
    enabled={false}
    freq={0}
    label="verb"
    type="verb"
  />
  <PartOfSpeechItem
    active={false}
    enabled={true}
    freq={0}
    label="adj"
    type="adjective"
  />
  <PartOfSpeechItem
    active={true}
    enabled={true}
    freq={1}
    label="adv"
    type="adverb"
  />
</div>
`;

exports[`<PartOfSpeechSelector /> should mark POS with excerpt as active 1`] = `
<div>
  <PartOfSpeechItem
    active={false}
    enabled={true}
    freq={0}
    label="noun"
    type="noun"
  />
  <PartOfSpeechItem
    active={false}
    enabled={true}
    freq={1}
    label="verb"
    type="verb"
  />
  <PartOfSpeechItem
    active={false}
    enabled={false}
    freq={0}
    label="adj"
    type="adjective"
  />
  <PartOfSpeechItem
    active={false}
    enabled={false}
    freq={0}
    label="adv"
    type="adverb"
  />
</div>
`;

exports[`<PartOfSpeechSelector /> should mark POS with excerpt as available 1`] = `
<div>
  <PartOfSpeechItem
    active={false}
    enabled={false}
    freq={0}
    label="noun"
    type="noun"
  />
  <PartOfSpeechItem
    active={false}
    enabled={true}
    freq={1}
    label="verb"
    type="verb"
  />
  <PartOfSpeechItem
    active={false}
    enabled={false}
    freq={0}
    label="adj"
    type="adjective"
  />
  <PartOfSpeechItem
    active={false}
    enabled={false}
    freq={0}
    label="adv"
    type="adverb"
  />
</div>
`;

exports[`<PartOfSpeechSelector /> should mark selected POS as 'active' 1`] = `
<div>
  <PartOfSpeechItem
    active={true}
    enabled={false}
    freq={0}
    label="noun"
    type="noun"
  />
  <PartOfSpeechItem
    active={false}
    enabled={false}
    freq={0}
    label="verb"
    type="verb"
  />
  <PartOfSpeechItem
    active={false}
    enabled={false}
    freq={0}
    label="adj"
    type="adjective"
  />
  <PartOfSpeechItem
    active={false}
    enabled={false}
    freq={0}
    label="adv"
    type="adverb"
  />
</div>
`;

exports[`<PartOfSpeechSelector /> should render 1`] = `
<div>
  <PartOfSpeechItem
    active={false}
    enabled={false}
    freq={0}
    label="noun"
    type="noun"
  />
  <PartOfSpeechItem
    active={false}
    enabled={false}
    freq={0}
    label="verb"
    type="verb"
  />
  <PartOfSpeechItem
    active={false}
    enabled={false}
    freq={0}
    label="adj"
    type="adjective"
  />
  <PartOfSpeechItem
    active={false}
    enabled={false}
    freq={0}
    label="adv"
    type="adverb"
  />
</div>
`;
